@@ -45,7 +45,14 @@ SIM_AC_OPTION_HARDWARE(yes,,\
 )
 
 AC_CHECK_FUNCS([getuid getgid geteuid getegid setuid setgid mmap munmap kill pread])
-AC_CHECK_HEADERS([sys/ioctl.h sys/mman.h net/if.h linux/if_tun.h linux/mii.h])
+AC_CHECK_HEADERS([ \
+	linux/if_tun.h \
+	linux/mii.h \
+	linux/types.h \
+	net/if.h \
+	sys/ioctl.h \
+	sys/mman.h \
+])
 
 BFIN_SIM_EXTRA_OBJS=
 
